# kokoro-audiobook

./: .gitignore  CLAUDE.md  PLAN.md  README.md  launch.bat  pyproject.toml  setup.bat
.claude/: settings.local.json
input/: kokoro.txt
output/: kokoro_timestamps.json
player/: player.html
src/: bilibili.py  extract.py  generate.py  launcher.py  run.py  utils.py
